--- a/app/views/mail_reminders/_form.html.erb
+++ b/app/views/mail_reminders/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.hidden_field :project_id, { :value => project.id } %>
   <p>
     <%= f.label l(:query) %>
-    <%= f.select :query_id, queries_for_options(project.id) %>
+    <%= f.select :query_id, queries_for_options(project.id, reminder.query_id) %>
     <%= link_to l(:label_query_new), new_query_path, :class => 'icon icon-add' %>
   </p>
   <div id="reminder_interval-<%= reminder.new_record? ? 'new' : reminder.id %>">
